# $Id: CHANGELOG,v 1.137 2005/02/07 19:54:08 tom_kelly33 Exp $

* 2005-02-07
	[rc.sysinit.in] - updates to unionfs functionality
	[linuxrc.in] - chmod 1777 on /tmp
* 2005-02-05
	[mklivecd] - fix keyboard links
	[rc.sysinit.in] - add unionfs option
* 2005-01-27
	[mklivecd] - ln -fs NOT sf [alaa]
* 2005-01-24
	[mklivecd] - added keyboard/kdm fix [alaa, ikerek]
	[rc.sysinit.in] - added gnome to special dir list [alaa, ikerek]
* 2005-01-20
	[hwdetect] - fix errors in sata loader
* 2005-01-15
	[hwdetect] - run /etc/udev/cdsymlinks.sh
	[rcsysinit] - added etjr change for nxserver
	- added Ross's patch for /var/log/messages
	[linuxrc.in] - added Emre's patch for dos-swap option
* 2005-01-14
	all - updated Jaco's email to jaco@puxedo.org
	[hwdetect] - added sata loading
	- added Chris usb fix for keyboard/mouse
	- added "not loaded" for modules
* 2005-01-09
	[mklivecd]
	- restored md5sum as an option
* 2005-01-01
	[mklivecd]
	- added syslinux >= 1.76-15mdk as a requirement
	- commented out halt file copy 
	- readjusted step count for progress bar
* 2004-12-29,30,31
	[mklivecd]
	- adjusted step counter for initrd progress
	- commented out some of TV's patches
	[hwdetect]
	- fixed $rawX call (parameter list changed)
	- ignore devfs if kernel 26
	- removed old getpersistent code
	[linuxrc.in]
	- added ide devices hda to hdt
* 2004-12-22
	[mklivecd]
	- added "--noprompt" boot option from Ross Thomas
* Dec 20th, 2004
	[mklivecd]: 
	- added 'nomce acpi=ht' to append options
	- added keyboard patch (Thierry Vignaud)
	- reduced $o_timeout to 150
	[linuxrc]
	- changed ramsize from totalmem/5 to /3
	- added scsi_cdrom check for /dev/sr[0-99] (Yoshinori Okuji)
	[rc.sysinit] 
	- removed chmod a+rw after /etc copy
	[hwdetect]
	- removed call to hwdetect_getpersistent 
	- fstab changes (Texstar)
	- usbdevfs changed to usbfs 

* Oct 6th. 2004 
  many changes to get to this point. Release 0.5.8 was
  the last for MDK 10.0. 

* Fri, Feb 27, 2004, 0.5.7-cvs